# clamwin

./: .gitattributes  .gitignore  .project  .pydevproject  .pylintrc  CMakeLists.txt  ChangeLog  ChangeLog-I18N  ClamTray.py  ClamWin.py  CloseWindows.py  Config.py  CwdTray.py  EmailAlert.py  ExplorerShell.py  GUID.py  INSTALL  MsgBox.py  OlAddin.py  README  README.md  RedirectStd.py  ReleaseProcedure.txt  Scheduler.py  SetUnicode.py  SplashScreen.py  ThreadFuture.py  Throbber.py  Utils.py  aboutdialog.xrc  build-clamav-win32.md  build.bat  build_setup_only.bat  credits  cw_about_dialog.cpp  cw_about_dialog.h  cw_application.cpp  cw_application.h  cw_auto_close.cpp  cw_auto_close.h  (+70 more)
.agent/workflows/: build.md  coding-standards.md  testing.md  win98-install.md
.github/: copilot-instructions.md
.github/workflows/: build-and-sign.yml  build-clamav-windows.yml
Setup/: Setup-nodb.iss  Setup.iss  ShFileOperation.iss  ToolbarForm.isd
Setup/Setupfiles/: License.rtf
Setup/py2exe/: setup_all.py
clamwin/cpp/: resource.h
clamwin/py/: Utils.py  wxFrameMain.py
cmake/: increment_clamwin_build_version.cmake  toolchain-mingw-x64.cmake  toolchain-mingw-x86.cmake
cpp/: ExplorerShell.def  ExplorerShell.rc  MessageTable.h  MessageTable.mc  ShellExt.cpp  ShellExt.h  ShellExt.reg  ShellExtImpl.cpp  build.bat  resource.h
doc/: App_CD-USB.sxw  DocChangeLog.txt  Notes.txt  clamwin.conf  config.sxw  cover.sxw  faq.sxw  install.sxw  intro.sxw  licence.sxw  manual.sxw  troubleshooting.sxw  usage.sxw
doc/HTML/: App_CD-USB.html  Table of Contents.hhc  advanced.html  clam.chm  config.html  cover.html  faq.html  install.html  intro.html  licence.html  troubleshooting.html  usage.html
doc/en_UK/: changelog.txt  manual_EN.odt  manual_EN.sxw  manual_en.chm
doc/fr_FR/: Manual_FR.chm  manual_fr.odt  manual_fr.sxw
doc/it_IT/: manual_it.chm
doc/jp_JP/: manual_jp.chm
doc/l10n/: ItalianManual.chm
doc/nl_BE/: Manual_NL.chm  Manual_NL.odt  changelog.txt
doc/ru_RU/: manual_ru.chm
locale/: Convert.bat  ar.iss  ar.po  ar_AE.iss  ar_AE.po  ar_SA.iss  ar_SA.po  bg_BG.iss  bg_BG.po  ca_ES.po  clamwin.pot  cs_CZ.iss  cs_CZ.po  de_DE.iss  de_DE.po  en_US.iss  es_ES.iss  es_ES.po  fr_FR.iss  fr_FR.po  hu_HU.iss  hu_HU.po  it_IT.iss  it_IT.po  ko_KR.po  nl_BE.iss  nl_BE.po  pl_PL.iss  pl_PL.po  pt_BR.iss  pt_BR.po  pt_PT.po  ru_RU.iss  ru_RU.po  si_LK.iss  si_LK.po  sl_SI.iss  sl_SI.po  sv_SE.po  tr_TR.po  (+3 more)
locale/GPL/: License_ar.rtf  License_bg_BG.rtf  License_en_US.rtf  License_nl_BE.rtf
locale/Inno Setup/: Arabic.isl  Bulgarian.isl  Ukrainian.isl
locale/cs_CZ/: ClamTray.mo  Config.mo  EmailAlert.mo  OlAddin.mo  ShellExtImpl.mo  wxDialogAbout.mo  wxDialogCheckUpdate.mo  wxDialogLogViewer.mo  wxDialogPreferences.mo  wxDialogScheduledScan.mo  wxDialogStatus.mo  wxDialogUtils.mo  wxFrameMain.mo
locale/fr_FR/: ClamTray.mo  EmailAlert.mo  OlAddin.mo  ShellExtImpl.mo  wxDialogAbout.mo  wxDialogCheckUpdate.mo  wxDialogLogViewer.mo  wxDialogPreferences.mo  wxDialogScheduledScan.mo  wxDialogStatus.mo  wxDialogUtils.mo  wxFrameMain.mo
locale/ko_KR/: ClamTray.mo  wxDialogAbout.mo  wxDialogLogViewer.mo  wxDialogPreferences.mo  wxDialogScheduledScan.mo  wxDialogStatus.mo  wxFrameMain.mo
locale/nl_BE/: ClamTray.mo  Config.mo  EmailAlert.mo  OlAddin.mo  ShellExtImpl.mo  wxDialogAbout.mo  wxDialogCheckUpdate.mo  wxDialogLogViewer.mo  wxDialogPreferences.mo  wxDialogScheduledScan.mo  wxDialogStatus.mo  wxDialogUtils.mo  wxFrameMain.mo
patches/: clamav-0.91.2-contrib-msvc.patch  clamav-0.91.2-native.patch  configure.patch  pywin32-201.win32gui.patch  wxPython-2424.maskededit.patch  wxPython-2424.throbber.patch  wxPython-2424.timectrl.patch
po/cs_CZ/: ClamTray.po  Config.po  EmailAlert.po  OlAddin.po  ShellExtImpl.po  wxDialogAbout.po  wxDialogCheckUpdate.po  wxDialogLogViewer.po  wxDialogPreferences.po  wxDialogScheduledScan.po  wxDialogStatus.po  wxDialogUtils.po  wxFrameMain.po
po/de_DE/: ClamTray.po  EmailAlert.po  OlAddin.po  ShellExtImpl.po  wxDialogAbout.po  wxDialogCheckUpdate.po  wxDialogLogViewer.po  wxDialogPreferences.po  wxDialogScheduledScan.po  wxDialogStatus.po  wxDialogUtils.po  wxFrameMain.po
po/fr_FR/: ClamTray.po  EmailAlert.po  OlAddin.po  ShellExtImpl.po  wxDialogAbout.po  wxDialogCheckUpdate.po  wxDialogLogViewer.po  wxDialogPreferences.po  wxDialogScheduledScan.po  wxDialogStatus.po  wxDialogUtils.po  wxFrameMain.po
po/ko_KR/: ClamTray.po  wxDialogAbout.po  wxDialogLogViewer.po  wxDialogPreferences.po  (+3 more)
py/: BalloonTip.pyd  ClamScanLog.txt  ClamTray.py  ClamUpdateLog.txt  ClamWin.py  CloseWindows.py  Config.py  DialogAbout.py  DialogCheckUpdate.py  DialogPreferences.py  DialogScan.py  DialogScheduledScan.py  DialogStatus.py  DialogUtils.py  EmailAlert.py  ExplorerShell.py  I18N.py  LogViewer.py  MainFrame.py  MsgBox.py  OlAddin.py  Process.py  RedirectStd.py  Scheduler.py  SetUnicode.py  SplashScreen.py  Utils.py  setup_all.py  testshelve.py  version.py  which.py  wxDialogAbout.py  wxDialogCheckUpdate.py  wxDialogLogViewer.py  wxDialogPreferences.py  wxDialogScheduledScan.py  wxDialogStatus.py  wxDialogUtils.py  wxFrameMain.py
resources/: clamwin.manifest  clamwin.rc  compatibility.manifest  dlg_status.xrc  framemain.xrc
setup/: Setup-nodb.iss  Setup.iss
shell-extension/: CMakeLists.txt  cw_shell_extension.cpp  cw_shell_extension.def  cw_shell_extension.h  cw_shell_extension.rc  cw_shell_extension.reg  cw_shell_extension_command.cpp  cw_shell_extension_command.h  cw_shell_extension_impl.cpp  cw_shell_extension_resource.h
tests/: test_auto_close.cpp  test_auto_close_integration.cpp  test_bg_task.cpp  test_cli_args.cpp  test_config.cpp  test_main.cpp  test_prefs_validation.cpp  test_real_tools.cpp  test_scan_commands.cpp  test_scan_parsers.cpp  test_scan_transcripts.cpp  test_scheduler.cpp  test_shell_extension_command.cpp  test_support.cpp  test_support.h  test_update_checker.cpp  test_utils.cpp
throb/: encode_bitmaps.py  throbImages.py
tools/: Remove-ClamWinShellExt.ps1  build-setup.ps1  sync-iso-from-source.ps1  test-gui.ps1  xp-refresh-clamav-bin.bat
(+164 files in other folders)
